NewArchive/0ad4d2584e30d8400f58d201ba998376-e19d71fa08eccc4d0e009103f5dda438/output
main.cpp:1:1: error: 'aabbddaabbdd' does not name a type
 aabbddaabbdd
 ^
